# qqq-trading-system

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  backtest_v6.py  build.bat  compose.yaml  config_manager.py  dashboard_tk.py  dashboard_web.py  generate_daily_report.py  live_trader.py  main_app.py  pyproject.toml  rebuild.bat  requirements.txt  restart.bat  run_trader.sh  settings.json  settings_gui.py  start.bat  start_trading.bat  stop.bat  trader_web.py  update_gist.py  watchdog.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts  router.ts  style.css
frontend/src/stores/: runtime.ts
frontend/src/views/: Backtests.vue  Configuration.vue  Overview.vue  Reports.vue  Signals.vue  Trades.vue
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_management.py  0003_signal_indicators.py  0004_trade_signals.py
scripts/: analyze_signal.py  run_backtest.py
sql/: mysql_schema.sql
src/qqq_trader/: __init__.py  api.py  backtest.py  backtest_service.py  cli.py  config.py  configuration.py  domain.py  engine.py  execution.py  interfaces.py  logging_config.py  persistence.py  reporting.py  risk.py  runtime.py  service.py  strategy.py  volatility.py
src/qqq_trader/adapters/: __init__.py  longbridge.py  paper.py
tests/: conftest.py  test_api_cli.py  test_backtest.py  test_configuration.py  test_engine.py  test_execution_adapter.py  test_persistence_reporting.py  test_risk.py  test_strategy.py  test_volatility.py
